<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ExportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#FFF"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="8dp"
                android:text="@string/options_activity"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/file_name_edit"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:autofillHints="@string/pref_export_name"
                    android:hint="@string/pref_export_name"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    tools:text="Note" />

                <Spinner
                    android:id="@+id/export_options"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:padding="8dp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#FFF"
            android:elevation="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="8dp"
                android:text="@string/pref_header_import_phone"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/black" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="?attr/selectableItemBackground"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="4dp">

                <Button
                    android:id="@+id/export_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:text="@string/pref_header_export" />

                <ProgressBar
                    android:id="@+id/export_progress"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:keepScreenOn="true"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:id="@+id/export_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:padding="8dp"
                android:visibility="gone"
                android:textAppearance="?android:textAppearanceMedium"
                tools:text="Note" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>