<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@android:color/background_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:baselineAligned="false"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/password_input"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/infofragment_lock_open"
                    tools:ignore="contentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/action_password" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pin_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/pin_input"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/infofragment_pin_off"
                    tools:ignore="contentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/action_pin" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/view_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="24dp"
                app:srcCompat="@drawable/infofragment_calendar_edit"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAppearance="?android:textAppearanceMedium"
                tools:text="@string/note_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingTop="24dp"
                android:paddingEnd="24dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/infofragment_calendar_edit"
                tools:ignore="contentDescription" />

            <TextView
                android:id="@+id/time_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/view_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/alarm_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    app:srcCompat="@drawable/infofragment_calendar_clock"
                    tools:ignore="contentDescription" />

                <TextView
                    android:id="@+id/alarm_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:padding="8dp"
                    android:textAppearance="?android:textAppearanceMedium"
                    tools:text="@string/note_alarm" />
            </LinearLayout>

            <ImageView
                android:id="@+id/alarm_clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="24dp"
                app:srcCompat="@drawable/infofragment_calender_cancel"
                tools:ignore="contentDescription" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/view_divider" />


    </LinearLayout>
</ScrollView>